# OTTER

./: .Dockerignore  .gitignore  Dockerfile  Makefile  README.md  conda_env.yml  main.py  pyproject.toml
data/: 1_variant_frequencies.csv  2_variant_frequencies.csv  3_variant_frequencies.csv  4_variant_frequencies.csv  BH_1_significant_genes.txt  BH_1ts_1_rep1.vcfsnpEff_genes.txt  BH_1ts_1_rep2.vcfsnpEff_genes.txt  BH_1ts_2_rep1.vcfsnpEff_genes.txt  BH_1ts_2_rep2.vcfsnpEff_genes.txt  BH_1ts_3_rep1.vcfsnpEff_genes.txt  BH_1ts_3_rep2.vcfsnpEff_genes.txt  BH_1ts_4_rep1.vcfsnpEff_genes.txt  BH_1ts_4_rep2.vcfsnpEff_genes.txt  BH_1ts_5_rep1.vcfsnpEff_genes.txt  BH_1ts_5_rep2.vcfsnpEff_genes.txt  BH_2_significant_genes.txt  BH_2ts_1_rep1.vcfsnpEff_genes.txt  BH_2ts_1_rep2.vcfsnpEff_genes.txt  BH_2ts_2_rep1.vcfsnpEff_genes.txt  BH_2ts_2_rep2.vcfsnpEff_genes.txt  BH_2ts_3_rep1.vcfsnpEff_genes.txt  BH_2ts_3_rep2.vcfsnpEff_genes.txt  BH_2ts_4_rep1.vcfsnpEff_genes.txt  BH_2ts_4_rep2.vcfsnpEff_genes.txt  BH_2ts_5_rep1.vcfsnpEff_genes.txt  BH_2ts_5_rep2.vcfsnpEff_genes.txt  BH_3_significant_genes.txt  BH_3ts_1_rep1.vcfsnpEff_genes.txt  BH_3ts_1_rep2.vcfsnpEff_genes.txt  BH_3ts_2_rep1.vcfsnpEff_genes.txt  BH_3ts_2_rep2.vcfsnpEff_genes.txt  BH_3ts_3_rep1.vcfsnpEff_genes.txt  BH_3ts_3_rep2.vcfsnpEff_genes.txt  BH_3ts_4_rep1.vcfsnpEff_genes.txt  BH_3ts_4_rep2.vcfsnpEff_genes.txt  BH_3ts_5_rep1.vcfsnpEff_genes.txt  BH_3ts_5_rep2.vcfsnpEff_genes.txt  BH_4_significant_genes.txt  BH_4ts_1_rep1.vcfsnpEff_genes.txt  BH_4ts_1_rep2.vcfsnpEff_genes.txt  (+17 more)
models/: autoencoder_unmasker.pth
(+209 files in other folders)
