[tool.poetry]
name = "oncotracker"
version = "0.1.0"
description = ""
authors = ["AntonCoon <eliseevantoncoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
