[tool.poetry]
name = "oncotracker"
version = "0.1.0"
description = ""
authors = ["AntonCoon <eliseevantoncoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
seaborn = "^0.12.2"
torch = ">=2.0.0, !=2.0.1"
vcfpy = "^0.13.6"
pandas = "^2.0.3"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
